--- a/_config.yml
+++ b/_config.yml
@@ -250,7 +250,7 @@ content:
             
             **Automation**: <mark>Batch scheduler</mark>
       - layout: left
-        title: Wipro technologies
+        title: Wipro Technologies
         sub_title: Project Engineer
         link: https://www.wipro.com/en-IN/overview/
         caption: October 2011 - May 2013
